--- a/src/main/resources/templates/mapper.xml.vm
+++ b/src/main/resources/templates/mapper.xml.vm
@@ -1,7 +1,7 @@
 #set($JavaMapperName = ${package.ModuleName} + "Mapper")
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
-<mapper namespace="com.ysw.ypm.provider.mapper.${JavaMapperName}">
+<mapper namespace="com.kuo.storyboard.mapper.${JavaMapperName}">
     #if(${enableCache})
     <!-- 开启二级缓存 -->
     <cache type="org.mybatis.caches.ehcache.LoggingEhcache"/>
